--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <span class="less-height"></span>
           </div>
         </div>
-        <div class="parallax-demo">
+        <!--<div class="parallax-demo">
             <h2>Contact</h2>
         </div>
           
@@ -66,6 +66,6 @@
                     </form>
                 </div>
             </div>
-          </div>
+          </div>-->
     </body>
 </html>
